--- a/app/views/admin/bike_stickers/index.html.haml
+++ b/app/views/admin/bike_stickers/index.html.haml
@@ -2,6 +2,10 @@
   .col-md-5
     %h1
       Manage Stickers
+  .col-md-7
+    %ul
+      %li.nav-item
+        = link_to "graph", admin_bike_stickers_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
 
   / We only show this if there aren't any sortable search params, or there is a search_bike_sticker_batch_id, because performance
   - if !sortable_search_params? || params[:search_bike_sticker_batch_id].present?
@@ -59,7 +63,14 @@
                 %td
                   %small= bike_sticker_batch.notes
 
-.row
+- if @render_chart
+  %h4.mt-2 Counts
+  = column_chart time_range_counts(collection: matching_bike_stickers, column: @chart_column), stacked: true, thousands: ",", defer: true
+
+.mt-2
+  = render partial: "/shared/period_select"
+
+.row.mt-4
   .col-md-6
     %p
       - unless params[:search_claimed].present?
@@ -68,6 +79,8 @@
       %span.less-strong
         = number_with_delimiter(matching_bike_stickers.claimed.count)
         claimed
+      %em
+        = humanized_time_range(@time_range)
       - if sortable_search_params?
         \-
         %em
