frontend updates for impounding

--- a/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
+++ b/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
@@ -1,4 +1,4 @@
-#organized_parking_notifications_show .email-preview {
+.parking-notification-email-preview {
   width: 100%;
   max-width: 700px;
   margin: 30px auto;
