--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -16,7 +16,7 @@
   .col-12
     %h1
       Edit Bike
-      - if @bike.deleted?.present?
+      - if @bike.deleted?
         %span.text-danger
           Deleted at:
           %span.convertTime
