--- a/app/views/organized/impound_records/index.html.haml
+++ b/app/views/organized/impound_records/index.html.haml
@@ -36,7 +36,9 @@
 
 .row.mt-4.mb-4
   .col-sm-6
-    = pluralize(number_with_delimiter(@impound_records.total_count), "Matching impound record")
+    = pluralize(number_with_delimiter(@impound_records.total_count), "matching impound record")
+    %em
+      = humanized_time_range(@time_range)
   .col-sm-6.offset-lg-4.col-lg-2
     %a.dropdown-toggle.btn.btn-outline-primary{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (@search_status == "active" ? "" : "active") }
       = @search_status.humanize
