--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -19,7 +19,7 @@
       - if @bike.deleted?
         %span.text-danger
           Deleted at:
-          %span.convertTime
+          %span.convertTime.preciseTime
             = l @bike.deleted_at, format: :convert_time
 
 
