--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -13,7 +13,7 @@
       %h2.text-danger.uncap.text-center
         This bike was deleted
         - if @bike.deleted_at.present?
-          %span.convertTime
+          %span.convertTime.preciseTime
             = l @bike.deleted_at, format: :convert_time
 
   - if @bike_sticker.present?
