--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -14,12 +14,6 @@
   overflow: hidden;
 }
 
-$dev-color: #9400d3;
-.only-dev-visible {
-  border: 1px solid $dev-color;
-  background: rgba($dev-color, 0.1);
-}
-
 // General styles
 @import "../stylesheets/utils";
 @import "../stylesheets/table_extensions";
@@ -44,4 +38,14 @@ $dev-color: #9400d3;
   .uppy-Dashboard-poweredBy {
     display: none;
   }
+}
+
+$dev-color: #9400d3;
+.only-dev-visible {
+  border: 1px solid $dev-color;
+  background: rgba($dev-color, 0.1);
+}
+// This is frequently used in display-tables, make it work
+.table-list .only-dev-visible {
+  padding: 2px 0.25rem;
 }
