--- a/app/views/organized/impound_records/_table.html.haml
+++ b/app/views/organized/impound_records/_table.html.haml
@@ -71,7 +71,7 @@
           %em
             = impound_record.status_humanized
         %td
-          = impound_record.user&.display_name
+          = impound_record.user&.display_name&.truncate(20)
         - if render_resolved_at
           %td
             - if impound_record.resolved_at.present?
