--- a/app/views/organized/impound_records/_table.html.haml
+++ b/app/views/organized/impound_records/_table.html.haml
@@ -66,7 +66,7 @@
         - unless skip_bike
           %td
             - if impound_record.bike.present?
-              = link_to organized_bike_text(impound_record.bike), bike_path(impound_record.bike)
+              = link_to organized_bike_text(impound_record.bike), bike_path(impound_record.bike, organization_id: current_organization.id)
         %td
           %em
             = impound_record.status_humanized
