--- a/app/views/organized/parking_notifications/_table.html.haml
+++ b/app/views/organized/parking_notifications/_table.html.haml
@@ -50,9 +50,9 @@
                 Notification ##{parking_notification.repeat_number}
           - unless skip_bike
             %span.extended-col-info.d-block
-              = link_to organized_bike_text(parking_notification.bike), bike_path(parking_notification.bike)
-          %strong.small.extended-col-info.d-block.status-cell
-            Status: #{status_display(parking_notification.status)}
+              = link_to organized_bike_text(parking_notification.bike), bike_path(parking_notification.bike, organization_id: current_organization.id)
+          %em.small.extended-col-info.d-block.status-cell
+            #{status_display(parking_notification.status)} status
           - if parking_notification.resolved_at.present?
             %strong.small.extended-col-info.d-block
               Impounded:
@@ -81,7 +81,7 @@
             - if parking_notification.repeat_record?
               = parking_notification.notification_number
         %td.hidden-sm-cells.status-cell
-          = status_display(status)
+          = status_display(parking_notification.status)
         %td.hidden-sm-cells
           - if parking_notification.resolved_at.present?
             %span.convertTime.preciseTime
