--- a/app/views/bikes/_edit_primary_menu.html.haml
+++ b/app/views/bikes/_edit_primary_menu.html.haml
@@ -2,16 +2,16 @@
 
 %nav.primary-edit-form-well-menu
   - if @bike.stolen?
-    %h3.nav-group-header= t(".theft_details")
+    %h3.nav-group-header= t(".theft_information")
     %ul
       - @theft_templates.each do |template, description|
         %li{ class: "edit-menu-#{template}" }
           - is_active = 'active' if @edit_template.match(/#{template}/)
           %a{ href: edit_bike_path(page: template), class: is_active }
             %h4= description
-
-  %h3.nav-group-header
-    = t(".bike_type_details", bike_type: @bike.type)
+  - if @bike.stolen?
+    %h3.nav-group-header
+      = t(".bike_type_information", bike_type: @bike.type)
   %ul
     - @bike_templates.each do |template, description|
       %li{ class: "edit-menu-#{template}" }
