--- a/app/views/bikes/edit_bike_details.html.haml
+++ b/app/views/bikes/edit_bike_details.html.haml
@@ -109,26 +109,27 @@
 
           = render "shared/form_well_footer_save"
 
-          %hr
-          .related-fields.mt-4
-            - if @bike.bike_stickers.any?
-              .form-group.row
-                %label.form-well-label
-                  = t(".existing_stickers")
-                %p.form-well-input-static
+          - if @bike.sticker_organizations.any?
+            %hr
+            .related-fields.mt-4
+              - if @bike.bike_stickers.any?
+                .form-group.row
+                  %label.form-well-label
+                    = t(".existing_stickers")
+                  %p.form-well-input-static
 
-                  - @bike.bike_stickers.each do |bike_sticker|
-                    = bike_sticker.pretty_code
-                    %br
-            .form-group.row.no-divider-row.mb-0
-              = label_tag :bike_sticker, class: "form-well-label" do
-                - sticker_information_link = link_to t(".a_qr_sticker"), "https://bikeindex.org/news/bike-index-unveils-new-qr-stickers-and-partnership-with-the-city-of-pa"
-                = t(".add_a_sticker_label_html", sticker_information_link: sticker_information_link)
-              .form-well-input
-                - bike_code_from_org = @bike.organizations.with_enabled_feature_slugs("bike_stickers").last&.bike_stickers&.claimed&.reorder(:code_integer)&.second&.pretty_code
-                = text_field_tag :bike_sticker, nil, class: 'form-control', placeholder: bike_code_from_org || "A0 100"
+                    - @bike.bike_stickers.each do |bike_sticker|
+                      = bike_sticker.pretty_code
+                      %br
+              .form-group.row.no-divider-row.mb-0
+                = label_tag :bike_sticker, class: "form-well-label" do
+                  - sticker_information_link = link_to t(".a_qr_sticker"), "https://bikeindex.org/news/bike-index-unveils-new-qr-stickers-and-partnership-with-the-city-of-pa"
+                  = t(".add_a_sticker_label_html", sticker_information_link: sticker_information_link)
+                .form-well-input
+                  - bike_code_from_org = @bike.organizations.with_enabled_feature_slugs("bike_stickers").last&.bike_stickers&.claimed&.reorder(:code_integer)&.second&.pretty_code
+                  = text_field_tag :bike_sticker, nil, class: 'form-control', placeholder: bike_code_from_org || "A0 100"
 
-            = render "shared/form_well_footer_save"
+              = render "shared/form_well_footer_save"
 
 - serial_correction_body = capture_haml do
   = form_tag do |t|
