--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -163,8 +163,8 @@
     - donation_request = session.delete(:render_donation_request)
     - if donation_request.present?
       = render "/shared/law_enforcement_donation_modal", locals: { kind: donation_request }
-    - elsif show_missing_information_alert
-      = render "/shared/stolen_missing_information_modal"
+    - elsif show_general_alert
+      = render "/shared/user_general_alert"
 
     = render 'shared/footer_revised'
 
