--- a/app/views/shared/_user_general_alert.html.haml
+++ b/app/views/shared/_user_general_alert.html.haml
@@ -1,17 +1,20 @@
+-# Note: This should only ever render one alert - hence the elsif
+-# The alerts are in priority from highest to lowest
 
 - if current_user.general_alerts.include?("stolen_bikes_without_locations")
-  - bike = current_user.rough_stolen_bikes.select { |bike| bike.current_stolen_record&.missing_location? }.first
-  - if bike.present?
+  - missing_location_bikes = current_user.rough_stolen_bikes.select { |bike| bike.current_stolen_record&.missing_location? }
+  - if missing_location_bikes.present?
 
     - modal_body = capture_haml do
       .modal-body
         %p
-          = t(".location_critical_html", bike_type: bike.type)
-        - current_user.stolen_bikes.missing_location.each do |bike|
+          = t(".location_critical_html", bike_type: missing_location_bikes.first.type)
+        - missing_location_bikes.each do |bike|
           %p
             = link_to t(".add_location_theft_bike_title_html", bike_title: bike.title_string), edit_bike_path(bike.to_param, page: "theft_details", anchor: "where-theft-happened")
         %p
           %em.less-strong
-            = t(".without_location_all_is_lost", bike_type: bike.type)
+            = t(".without_location_all_is_lost", bike_type: missing_location_bikes.first.type)
 
     = render partial: "shared/modal", locals: { title: t(".stolen_missing_location_title"), modal_body: modal_body, id: "stolenMissingLocationModal", start_open: true }
+
