--- a/app/views/organized/parking_notifications/_show_details.html.haml
+++ b/app/views/organized/parking_notifications/_show_details.html.haml
@@ -27,7 +27,7 @@
             - if @parking_notification.current?
               %em.less-strong
                 This is the current parking notification for this #{@bike.type}
-            - elsif @parking_notification.superseded?
+            - elsif @parking_notification.replaced?
               %em.less-strong
                 This parking notification is still active, but
                 = link_to "notification ##{@parking_notification.current_associated_notification.notification_number}", organization_parking_notification_path(@parking_notification.current_associated_notification, organization_id: current_organization.to_param)
